# GPUSnatcher

./: .pre-commit-config.yaml  CHANGELOG.md  README-CN.md  README.md  email_conf.json  pyproject.toml  scramble4gpu.py
.github/workflows/: CI.yaml  publish.yaml
src/gpusitter/: configs.py  emails.py  gpu.py  logger.py  main.py  utils.py
src/gpusnatcher/: configs.py  email.py  emails.py  gpu.py  main.py  utils.py
tests/: conftest.py  test_config.py  test_gpu.py
